10_deployment/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-openshift-app
  template:
    metadata:
      labels:
        app: html-openshift-app
    spec:
      containers:
      - name: html-openshift-app
        image: image-registry.openshift-image-registry.svc:5000/254195-lucsut/html-openshift-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
