10_deployment/service.yml
kind: Service
apiVersion: v1
metadata:
  name: html-openshift-app
  labels:
    app: html-openshift-app
    app.kubernetes.io/part-of: html-openshift-app
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    app: html-openshift-app
